--- a/MileStone0 Page/views/home_search_results.jade
+++ b/MileStone0 Page/views/home_search_results.jade
@@ -3,6 +3,9 @@ html
   head
     title= title
     
+    link(rel="shortcut icon" href="/images/sfsu.jpg" type="image/jpg")
+    meta(charset='utf-8')
+    | &#x9;
     meta(name='viewport', content='width=device-width, initial-scale=1')
     | &#x9;
     script(src='https://code.jquery.com/jquery-3.2.1.js', integrity='sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=', crossorigin='anonymous')
@@ -13,8 +16,7 @@ html
     | &#x9;
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     | &#x9;
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-    | &#x9;
+    
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
     |     
     // Load Header and Footer
@@ -31,13 +33,15 @@ html
       #map {
       height: 500px;
       width: 500px;
-      
+      margin-top: 0%;
+      margin-left: 10%;
       }
       #details{
       float: right;
+      margin-top: 30%;
 
       }    
-      
+      ul{list-style-type:none; }
       #background {
       position: fixed;
       top: 0;
@@ -52,17 +56,60 @@ html
       filter:alpha(opacity=40);
       z-index: -1;
       }
-    | &#x9;
-    | &#x9;
-    title RECycle
+      #message{
+      position: relative;
+      right: 100px;  
+      top: 150px;
+      float: right;
+      padding-right: 10px;
+      font-family: 'Open Sans Condensed', arial, sans;
+      width: 350px;
+      padding: 30px;
+      background: #FFFFFF;
+      margin: 50px auto;
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+      -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+      -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+      }
+      #message p{
+      background: #4D4D4D;
+      text-transform: uppercase;
+      font-family: 'Open Sans Condensed', sans-serif;
+      color: white;
+      font-size: 18px;
+      font-weight: 100;
+      padding: 20px;
+      margin: -30px -30px 30px -30px;
+      }
+      #message input[type="submit"]{
+      -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      background-color: #2CBBBB;
+      border: 1px solid #27A0A0;
+      display: inline-block;
+      cursor: pointer;
+      color: #FFFFFF;
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 14px;
+      padding: 8px 18px;
+      text-decoration: none;
+      text-transform: uppercase;
+      }
+      #message input[type="submit"]:hover {
+      background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+      background-color:#34CACA;
+      }
+      td{padding: 30px;}
+  
+  title RECycle
   | &#x9;
 
 
   body
-
-    #background
+   
     #header
-    
+    #background
       
          if (rows=='Sorry Not FOund!')
            p #{rows}
@@ -70,52 +117,20 @@ html
       table
       
         - each item in rows 
-         td
+         
+          tr
+           td
             #details
                 ul
-                 li 
-                   img(src="/images/#{item.image}",style="height:500px;width:500px;")
+                 li
+                   img(src="/images/#{item.image}",style="height:200px;width:400px;margin-top: 5%;")
                  li Square Feet: #{item.square_size}
                  li Number of Bedrooms: #{item.number_of_bedrooms}
                  #address #{item.street},#{item.city},#{item.zipcode}
-                 
-
-           td
-              form#contact_form(action='/message?id=#{item.id}', method='POST', enctype='multipart/form-data')
-
-                  p Interested in buying this house? 
-                    a(href="#contact") Contact the seller
-                    p#contact
-                    label(for='bname') Your name:
-                    br
-                    | 
-                    input(name='bname', type='text', value='', size='30')
-                    br
-                    | 
-                    label(for='bemail') Your email:
-                    br
-                    | 
-                    input(name='bemail', type='text', value='', size='30')
-                    br
-                    label(for='vphone') Your phone:
-                    br
-                    | 
-                    input(name='vphone', type='text', value='', size='30')
-                    br
-                    label(for='message') Your message:
-                    br
-                    | 
-                    textarea(name='messages', rows='7', cols='30')
-                    br
-                    | 
-                    input(type='hidden', name='action', value='submit')
-                    | 
-                    input#submit_button(type='submit', value='Send message')
-
-
-         
-          tr(valign="top")
-            #map 
+             
+              tr
+               td(valign="top")
+                #map 
                     |     
                     script.
                        function initMap() {
@@ -143,9 +158,31 @@ html
                          });
                        }
                     script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDOIMFbTbLtGiTA6u-FPXasu4vmIF-HL2A&callback=initMap')
+ 
+            #message                 
+             form#contact_form(action='/message?id=#{item.id}', method='POST')
 
-          
-                     
 
-              
-              
+                  p Interested in buying this house? Fill out the details
+                  label(for='bname') Your name:
+                    br
+                    input(name='bname', type='text', size='30')
+                    br
+                  label(for='bemail') Your email:
+                    br
+                    input(name='bemail', type='text', size='30')
+                    br
+                  label(for='vphone') Your phone:
+                    br
+                    input(name='vphone', type='text', size='30')
+                    br
+                  label(for='messages') Your message:
+                    br
+                  textarea(name='messages', rows='7', cols='30') 
+                    
+                  input#submit_button(type='submit')                                                        
+   #footer
+            
+
+
+             
