--- a/MileStone0 Page/views/header1.jade
+++ b/MileStone0 Page/views/header1.jade
@@ -178,7 +178,7 @@ html
           .row.row1
             ul.largenav.pull-right
               li.upper-links
-                a.links(href='homepage') Home
+                a.links(href='homepage?id=#{session.id}') Home
               li.upper-links
                 a.links(href='login') Login
               li.upper-links
