--- a/MileStone0 Page/views/header1.jade
+++ b/MileStone0 Page/views/header1.jade
@@ -212,7 +212,7 @@ html
                 span.largenav RECycle
 
             .col-sm-7.col-md-7
-             form.navbar-form(role='form', method='post',action='search',onsubmit="return validateForm()")
+             form.navbar-form(role='form', method='post',action='search',onsubmit="return validateForm() & saveComment()")
               select.selectpicker.form-control( name="selectpicker",id ="zip",data-style='btn-danger')
                   option(value='none') Select
                  
@@ -301,6 +301,17 @@ html
                       }
 
                     } 
+                    document.getElementById("search_input").value = localStorage.getItem("search");
+
+                    function saveComment() {
+                    var search = document.getElementById("search_input").value;
+                    
+
+                    localStorage.setItem("search", search);
+                    location.reload();
+                    return false;
+                   //return true;
+                   }
       #mySidenav.sidenav
         .container(style='background-color: #2874f0; padding-top: 10px;')
           span.sidenav-heading Home
