--- a/views/header.jade
+++ b/views/header.jade
@@ -229,7 +229,7 @@ html
                a(href='homepage') RECycle
               h4  CSC648 Student Project
             .col-sm-7.col-md-7
-             form.navbar-form(role='form', method='post',action='search_results', onsubmit="return validateForm()")
+             form.navbar-form(role='form', method='post',action='search_results', onsubmit="return validateForm() & saveComment()")
               select.selectpicker.form-control( name="selectpicker",id ="zip",data-style='btn-danger')
                   option(value='none') Search by 
                  
@@ -310,7 +310,18 @@ html
                      
                       }
 
-                    }  
+                    }
+                    document.getElementById("search_input").value = localStorage.getItem("search");
+
+                    function saveComment() {
+                    var search = document.getElementById("search_input").value;
+                    
+
+                    localStorage.setItem("search", search);
+                    location.reload();
+                    return false;
+                   //return true;
+                   }  
       #mySidenav.sidenav
         .container(style='background-color: #2874f0; padding-top: 10px;')
           span.sidenav-heading Home
