--- a/MileStone0 Page/views/search_results.jade
+++ b/MileStone0 Page/views/search_results.jade
@@ -31,6 +31,7 @@ html
     | &#x9;
     | &#x9;
     style.
+
       .pricetag {
       text-align: center;
       color: #00000;
@@ -44,7 +45,7 @@ html
       height: 300px;
       background-color: white;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      margin: 10px;
+      margin-top: 10%;
       }
       #featureBox:hover {
       -webkit-filter: drop-shadow(8px 8px 10px black);
@@ -97,7 +98,8 @@ html
       opacity: 0.8;
       }
       .panel {
-      width: 100%
+      width: 100%;
+      margin-top: 30%;
       }
       #background {
       position: fixed;
@@ -122,6 +124,7 @@ html
       position: relative;
       display: inline-block;
       }
+      #searchResult {margin-top:6%}
   | &#x9;
   body
     // Background
@@ -156,7 +159,9 @@ html
         .col-xs-9.col-sm-9.col-md-9
           .container
           #searchResult
+             p #{length} results displayed
             - each item in rows 
+
               
                  #featureBox
                  
