--- a/views/home_search_results.jade
+++ b/views/home_search_results.jade
@@ -160,7 +160,7 @@ html
                     script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDOIMFbTbLtGiTA6u-FPXasu4vmIF-HL2A&callback=initMap')
  
             #message                 
-             form#contact_form(action='message?id=#{item.id}', method='POST')
+             form#contact_form(action='message?id=#{item.id}', method='POST',onsubmit = "return message_submit()")
 
 
                   p Interested in buying this house? Fill out the details
@@ -180,7 +180,12 @@ html
                     br
                   textarea(name='messages', rows='7', cols='30') 
                     
-                  input#submit_button(type='submit')                                                        
+                  input#submit_button(type='submit')   
+                script.
+                 function message_submit() {
+
+                   alert("Message submitted successfully");
+                 }                                                     
    #footer
             
 
