--- a/views/search_results.jade
+++ b/views/search_results.jade
@@ -151,12 +151,12 @@ html
         .col-xs-6.col-sm-3.col-md-3
           .panel.panel-primary
             .panel-heading
-              h3.panel-title Filter
+              h3.panel-title Sort
             | &#x9;&#x9;&#x9;&#x9;&#x9;   
             .panel-body
               .w3-bar-item
                 select(name="selectPicker", id="selOption",onchange="loadDoc()")
-                   option(value='none') Filter Results By
+                   option(value='none') Sort Results By
                    option(value='price') Price
                    option(value='number_of_bedrooms') Number of Bedrooms
                    option(value='square_size') Square feet
@@ -165,6 +165,7 @@ html
         .col-xs-9.col-sm-9.col-md-9
           .container
           #searchResult
+            p #{length} results displayed
             - each item in rows
                #featureBox
                     a(href="home_search_results?id=#{item.id}") 
