--- a/views/home_search_results.jade
+++ b/views/home_search_results.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title= title
+    title=RECycle
+
     
     link(rel="shortcut icon" href="/images/sfsu.jpg" type="image/jpg")
     meta(charset='utf-8')
@@ -102,7 +103,6 @@ html
       }
       td{padding: 30px;}
   
-  title RECycle
   | &#x9;
 
 
