--- a/views/seller_results.jade
+++ b/views/seller_results.jade
@@ -50,12 +50,13 @@ html
                    img(src="#{item.image}",style="height:200px;width:400px;margin-top: 15%;")
                  li Square Feet: #{item.square_size}
                  li Number of Bedrooms: #{item.number_of_bedrooms}
-                 #address #{item.street},#{item.city},#{item.zipcode}
+                 li address #{item.street},#{item.city},#{item.zipcode}
  
-               form#contact_form(action='delete', method='POST')
-                 button(type="submit") Delete
-                 button(type="submit") Edit
-              
+                    form#contact_form(action='delete?id=#{item.id}', method='POST',onsubmit="delete_message();")
+                      button(type="submit") Delete
+                      button(type="submit") Edit
+             script.
+                 function delete_message(){alert("Property Deleted");}
  
                                                   
    #footer
