--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -100,7 +100,7 @@ html
     // SampleSection
     #SampleHouseSection.container-fluid
       #RECycleLogoBox
-        h1(style="font-size: 200%; font-family: 'Helvetica Neue'; text-shadow: 2px 2px #ff0000;") This is a demo by Team 13
+        h1(style="font-size: 200%; font-family: 'Helvetica Neue'; text-shadow: 2px 2px #ff0000;") SFSU Software Engineering Project, Fall 2017. For Demonstration Only
     | &#x9;
     .container-fluid
     // NewHousesSection
