--- a/views/profile.jade
+++ b/views/profile.jade
@@ -240,7 +240,7 @@ html
               li.upper-links
                 a.links(href="message_details?id=#{item.id}"  id="id") Messages
               li.upper-links
-                a.links(href="add_details?id=#{item.id}"  id="id") Add Details
+                a.links(href="add_details?id=#{item.id}"  id="id") Add Listing
               li.upper-links
                 a.links(href='login') Logout
               li.upper-links
