--- a/views/signup.jade
+++ b/views/signup.jade
@@ -67,7 +67,7 @@ html
     #mainform.container
       .row
         .col-md-12
-          #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:200px')
+          #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
             .panel.panel-info
               .panel-heading
                 .panel-title Sign Up
