--- a/views/login.jade
+++ b/views/login.jade
@@ -51,7 +51,7 @@ html
     #header  
     | &#x9;&#x9;
     .container
-      #loginbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style='margin-top:180px;')
+      #loginbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
         .panel.panel-info
           .panel-heading
             .panel-title Sign In 
@@ -72,7 +72,7 @@ html
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .form-group(style='margin-top:10px;top: 1800px;')
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
-              .text-right
+              .pull-right
               .col-sm-12.controls
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               button#btn-login.btn.btn-success(type='submit') Login 
