--- a/MileStone0 Page/views/seller_header.jade
+++ b/MileStone0 Page/views/seller_header.jade
@@ -209,6 +209,8 @@ html
               li.upper-links
                 a.links(href='homepage') Home
               li.upper-links
+                a.links(href='/profile') Profile
+              li.upper-links
                 a.links(href='login') Messages
               li.upper-links
                 a.links(href='login') Edit Details
