--- a/MileStone0 Page/views/message_details.jade
+++ b/MileStone0 Page/views/message_details.jade
@@ -20,12 +20,165 @@ html
     // Load Header and Footer
     script.
       $(function() {
-      $("#header").load("/header1");
+     
       $("#footer").load("/footer");
       });
     | &#x9;
     | &#x9;
     style.
+      #flipkart-navbar {
+      background-color: #2874f0;
+      color: #FFFFFF;
+      }
+      .row1{
+      padding-top: 10px;
+      }
+      .row2 {
+      padding-bottom: 20px;
+      }
+      .flipkart-navbar-input {
+      padding: 11px 16px;
+      border-radius: 2px 0 0 2px;
+      border: 0 none;
+      outline: 0 none;
+      font-size: 15px;
+      }
+      .flipkart-navbar-button {
+      background-color: #ffe11b;
+      border: 1px solid #ffe11b;
+      border-radius: 0 2px 2px 0;
+      color: #565656;
+      padding: 10px 0;
+      height: 43px;
+      cursor: pointer;
+      }
+      .item-number {
+      border-radius: 3px;
+      background-color: rgba(0, 0, 0, .1);
+      height: 20px;
+      padding: 3px 6px;
+      font-weight: 500;
+      display: inline-block;
+      color: #fff;
+      line-height: 12px;
+      margin-left: 10px;
+      }
+      .upper-links {
+      display: inline-block;
+      padding: 0 11px;
+      line-height: 23px;
+      font-family: 'Roboto', sans-serif;
+      letter-spacing: 0;
+      color: inherit;
+      border: none;
+      outline: none;
+      font-size: 12px;
+      }
+      .dropdown {
+      position: relative;
+      display: inline-block;
+      margin-bottom: 0px;
+      }
+      .dropdown:hover .dropdown-menu {
+      display: block;
+      }
+      .dropdown .dropdown-menu {
+      position: absolute;
+      top: 100%;
+      display: none;
+      background-color: #fff;
+      color: #333;
+      left: 0px;
+      border: 0;
+      border-radius: 0;
+      box-shadow: 0 4px 8px -3px #555454;
+      margin: 0;
+      padding: 0px;
+      }
+      .links {
+      color: #fff;
+      text-decoration: none;
+      }
+      .links:hover {
+      color: #fff;
+      text-decoration: none;
+      }
+      .profile-links {
+      font-size: 12px;
+      font-family: 'Roboto', sans-serif;
+      border-bottom: 1px solid #e9e9e9;
+      box-sizing: border-box;
+      display: block;
+      padding: 0 11px;
+      line-height: 23px;
+      }
+      .profile-li{
+      padding-top: 2px;
+      }
+      .largenav {
+      display: none;
+      }
+      .smallnav{
+      display: block;
+      }
+      .smallsearch{
+      margin-left: 15px;
+      margin-top: 15px;
+      }
+      .menu{
+      cursor: pointer;
+      }
+      @media screen and (min-width: 768px) {
+      .largenav {
+      display: block;
+      }
+      .smallnav{
+      display: none;
+      }
+      .smallsearch{
+      margin: 0px;
+      }
+      }
+      /*Sidenav*/
+      .sidenav {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: #fff;
+      overflow-x: hidden;
+      transition: 0.5s;
+      box-shadow: 0 4px 8px -3px #555454;
+      padding-top: 0px;
+      }
+      .sidenav a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+      transition: 0.3s
+      }
+      .sidenav .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+      margin-left: 50px;
+      color: #fff;
+      }
+      @media screen and (max-height: 450px) {
+      .sidenav a {font-size: 18px;}
+      }
+      .sidenav-heading{
+      font-size: 36px;
+      color: #fff;
+      }
+      #flipkart-navbar {
+      margin-bottom: 15px;
+      }
       #background {
       position: fixed;
       top: 0;
@@ -62,17 +215,45 @@ html
     // Background
     #background
     // Header
-    #header
-    | &#x9;&#x9;
+  - each item in user_details
+    header
+      #flipkart-navbar
+        .container
+          .row.row1
+            ul.largenav.pull-right
+              li.upper-links
+                a.links(href='homepage') Home
+              li.upper-links
+                a.links(href="profile?id=#{item.id}"  id="id") Profile
+              li.upper-links
+                a.links(href="message_details?id=#{item.id}"  id="id") Messages
+              li.upper-links
+                a.links(href="add_details"  id="id") Add Details
+              
+              li.upper-links
+                a.links(href='login') Logout
+              li.upper-links
+                a.links(href='signup') Sign Up
+              li.upper-links
+                a.links(href='http://clashhacks.in/')
+                  svg(width='16px', height='12px', style='overflow: visible;')
+    
+
     .container-fluid
+    
       .content
      #message 
+     
       ul.nav.nav-pills.nav-stacked.col-md-2
         li.active
           a(href='#tab_a', data-toggle='pill') New Mail
         | &#x9;&#x9;&#x9;  
         li
           a(href='#tab_b', data-toggle='pill') Send a Message
+
+        li
+            - each item in rows
+               a(href="/profile?id=#{item.contact_ID}") Profile
       | &#x9;&#x9;&#x9;
       .tab-content.col-md-10
         // Send Mail Tab
@@ -96,7 +277,7 @@ html
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   tr
                    - each item in rows
-
+      
                       td #{item.bname}
                       | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                       td #{item.messages}
