Added functionality for connecting the pages in user profile

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -274,4 +274,5 @@ html
 
         - each item in person
           a(href='seller_results?id=#{item.id}')
-             img(src="#{item.image}",style="height:200px;width:400px;margin-top: 5%;") 
+             img(src="#{item.image}",style="height:200px;width:400px;margin-top: 5%;")
+     #footer 
