--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -45,7 +45,7 @@ html
       z-index: -1;
       }
       #SampleHouseSection {
-      height: 400px;
+      height: 300px;
       width: 100%;
       background-size: cover;
       background-image: url('http://designexplora.com/wp-content/uploads/2016/07/Design-Wallpaper-And-Photo-High-Resolution-Download-Interior-Design-In-Interior-Design-Pictures.jpg');
@@ -69,7 +69,7 @@ html
       }
       #TitleText {
       width: 100%;
-      margin: 0 auto;
+      margin-top:0px;
       color: white;
       }
       .thumbnail {
@@ -100,7 +100,6 @@ html
     // SampleSection
     #SampleHouseSection.container-fluid
       #RECycleLogoBox
-        h1(style="font-size: 200%; font-family: 'Helvetica Neue'; text-shadow: 2px 2px #ff0000;") SFSU Software Engineering Project, Fall 2017. For Demonstration Only
     | &#x9;
     .container-fluid
     // NewHousesSection
