Updated the profile of seller by displaying the details of the houses

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,8 +1,10 @@
+
 doctype html
 html
   head
     title= title
     
+    link(rel="shortcut icon" href="/images/sfsu.jpg" type="image/jpg")
     title RECycle
     // Using Bootstrap3.3.7
     meta(charset='utf-8')
@@ -47,34 +49,7 @@ html
       height: 43px;
       cursor: pointer;
       }
-      .cart-button {
-      background-color: #2469d9;
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .23), inset 1px 1px 0 0 hsla(0, 0%, 100%, .2);
-      padding: 10px 0;
-      text-align: center;
-      height: 41px;
-      border-radius: 2px;
-      font-weight: 500;
-      width: 120px;
-      display: inline-block;
-      color: #FFFFFF;
-      text-decoration: none;
-      color: inherit;
-      border: none;
-      outline: none;
-      }
-      .cart-button:hover{
-      text-decoration: none;
-      color: #fff;
-      cursor: pointer;
-      }
-      .cart-svg {
-      display: inline-block;
-      width: 16px;
-      height: 16px;
-      vertical-align: middle;
-      margin-right: 8px;
-      }
+      
       .item-number {
       border-radius: 3px;
       background-color: rgba(0, 0, 0, .1);
@@ -141,9 +116,6 @@ html
       .largenav {
       display: none;
       }
-      .pull-right{
-      float: right;
-      }
       .smallnav{
       display: block;
       }
@@ -204,9 +176,37 @@ html
       }
       #flipkart-navbar {
       margin-bottom: 15px;
-      }		
+      }
+      .panel-body {
+      padding-top: 30px;
+      }
+      #addButton {
+      float: right;
+      margin: 1%;
+      }
+      #deleteButton {
+      margin: 1%;
+      }
+      #deleteButton:hover  {
+      background-color: red;
+      }
+      #addButton:hover, #editButton:hover {
+      background-color: lightblue;
+      }
+      #editButton {
+      margin: 1%;
+      }
+    // Load Header and Footer
+    script.
+      $(function() {
+      $("#header").load("/seller_header");
+      $("#footer").load("/footer");
+      });
+    | &#x9;
+    | &#x9;
+    style.
       #background {
-      position:absolute;     
+      
       top: 0;
       left: 0;
       width: 100%;
@@ -217,10 +217,8 @@ html
       background-size: cover;
       opacity: 0.2;
       filter:alpha(opacity=40);
-      z-index: -1;
       }
       ul {list-style:none;}
-       
     | &#x9;
     | &#x9;
     title RECycle
@@ -240,17 +238,21 @@ html
               li.upper-links
                 a.links(href="message_details?id=#{item.id}"  id="id") Messages
               li.upper-links
-                a.links(href="add_details?id=#{item.id}"  id="id") Add Listing
+                a.links(href="add_details?id=#{item.id}"  id="id") Add Listings
+              
               li.upper-links
                 a.links(href='login') Logout
               li.upper-links
                 a.links(href='signup') Sign Up
+              li.upper-links
+                a.links(href='http://clashhacks.in/')
+                  svg(width='16px', height='12px', style='overflow: visible;')
               
           .row.row2
             .col-sm-3
-              h2(style='margin:10px;')
+              h2(style='margin:0px;')
                 span.smallnav.menu(onclick='openNav()') ☰ RECycle
-              h1(style='margin:20px;')
+              h1(style='margin:0px;')
                 span.largenav RECycle
            
       #mySidenav.sidenav
@@ -263,16 +265,50 @@ html
         a.profile-links(href='http://clashhacks.in/') Link
         a.profile-links(href='http://clashhacks.in/') Link
         a.profile-links(href='http://clashhacks.in/') Link
+        | <
         a.profile-links(href='http://clashhacks.in/') Sign Out
     | &#x9;&#x9;
     
     .container
         .main-content
-        p Welcome to your dashboard
-        | Here are the properties you have uploaded for sale 
-        ul
+        p Welcome to your dashboard 
+        
 
-        - each item in person
-          a(href='seller_results?id=#{item.id}')
-             img(src="#{item.image}",style="height:200px;width:400px;margin-top: 5%;")
-     #footer 
+        
+    .container
+      .row
+        a(href='add_details?id=#{item.id}')
+          button#addButton.btn.btn-default.btn-sm(type='button')
+            span.glyphicon.glyphicon-plus
+      .panel.panel-primary
+        .panel-heading
+          h3.panel-title DashBoard
+        .panel-body
+          table
+            tr.header
+              th(style='width:50%;') Address
+              th(style='width:20%;') Price
+              th(style='width:15px;') Image
+              th(style='width:15px;')  
+            - each item in person
+             tr
+              td #{item.house_number}, #{item.street}, #{item.city}, #{item.state}, #{item.zipcode}
+              td $#{item.price}
+              td 
+                img(src='#{item.image}', style="height:180px;")
+              td
+                a(href='http://google.com')
+                  button#editButton.btn.btn-default.btn-sm(type='button')
+                    span.glyphicon.glyphicon-pencil
+              td
+               form#contact_form(action='delete?id=#{item.id}', method='POST' onsubmit="delete_message()") 
+                 button#deleteButton.btn.btn-default.btn-sm(type='submit')
+                  span.glyphicon.glyphicon-minus
+          script.
+             function delete_message(){alert("Property Deleted");}
+    // Footer
+    #footer  
+
+          
+          
+
