--- a/views/search_results.jade
+++ b/views/search_results.jade
@@ -32,10 +32,17 @@ html
     | &#x9;
     style.
       .pricetag {
-      text-align: center;
       color: #000000;
-      font-size: 100%;
       font-weight: bold;
+      top: 0;
+      left: 80%;
+      position: absolute;
+      width: 100px;
+      height: 50px;
+      background-color: white;
+      border: 3px dashed #ccc;
+      text-align:center;
+      font-size: 150%;
       }
       #featureBox {
       position: relative;
@@ -46,52 +53,14 @@ html
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       margin: 10px;
       margin-top: 50px;
+      border: 3px dotted black;
       }
       #featureBox:hover {
-      -webkit-filter: drop-shadow(8px 8px 10px black);
-      filter: drop-shadow(8px 8px 10px black);
-      }
-      #featureBox:hover .overlay {
-      bottom: 80%;
-      height: 20%;
+      filter: drop-shadow(8px 8px 10px black); 
       }
       #featureImage {
       width: 400px;
       height: 250px;
-      }
-      .normalBox {
-      position: relative;
-      display: inline-block;
-      width: 250px;
-      height: 300px;
-      background-color: white;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      margin: 10px;
-      }
-      .normalBox:hover {
-      -webkit-filter: drop-shadow(8px 8px 10px black);
-      filter: drop-shadow(8px 8px 10px black);
-      }
-      .normalBox:hover .overlay {
-      bottom: 80%;
-      height: 20%;
-      }
-      .normalImage {
-      width: 250px;
-      height: 250px;
-      }
-      .overlay {
-      position: absolute;
-      bottom: 100%;
-      top: 0;
-      left: 80%;
-      right: 0;
-      background-color: #008CBA;
-     
-      width: 20%;
-      height:0;
-      opacity: 0.9;
-      transition: .5s ease;
       }
       body {
       position: relative;
@@ -173,7 +142,7 @@ html
             - each item in rows
                #featureBox
                     a(href="home_search_results?id=#{item.id}") 
-                     p.pricetag.overlay $#{item.price} 
+                     p.pricetag$#{item.price} 
                      img(src="#{item.image}", style="height:250px;width:400px;")
                     p.text-center #{item.house_number}, #{item.street}, #{item.city}, #{item.state}, #{item.zipcode}
 
@@ -219,7 +188,7 @@ html
                 p1.innerHTML = "$" + row.price;
                 img.setAttribute("src", row.image);
                 img.setAttribute("height","250px");
-                img.setAttribute("width","500px");
+                img.setAttribute("width","400px");
                 p2.setAttribute("class","text-center");
                 p2.innerHTML = row.house_number + ", " + row.street + ", " + row.city + ", " + row.state;
                 div.setAttribute("id","featureBox");
