--- a/views/home_search_results.jade
+++ b/views/home_search_results.jade
@@ -124,8 +124,8 @@ html
                 ul
                  li
                    img(src="#{item.image}",style="height:200px;width:400px;margin-top: 5%;")
-                 li Square Feet: #{item.square_size}
-                 li Number of Bedrooms: #{item.number_of_bedrooms}
+                 li(style='font-size:20px') Square Feet: #{item.square_size}
+                 li(style='font-size:20px') Number of Bedrooms: #{item.number_of_bedrooms}
                  #address #{item.street},#{item.city},#{item.zipcode}
              
               tr
